--- a/src/components/mobileMenu.module.css
+++ b/src/components/mobileMenu.module.css
@@ -1,6 +1,6 @@
 .mobileMenu {
   position: absolute;
-  top: 20px;
+  top: 10px;
   right: 16px;
 }
 .mobileMenu::after {
@@ -41,6 +41,7 @@
   transform: translateX(-10px);
   opacity: 0;
   width: 300px;
+  pointer-events: none;
 }
 .mobileNav a {
   display: flex;
@@ -63,4 +64,5 @@
   transform: initial;
   opacity: 1;
   z-index: 100;
+  pointer-events: initial;
 }
