--- a/src/components/mobileMenu.module.css
+++ b/src/components/mobileMenu.module.css
@@ -1,3 +1,11 @@
+:root {
+  --blue: #0369a1;
+  --white: #fff;
+  --gray: #eee
+  --black: #000;
+}
+
+
 .mobileMenu {
   position: absolute;
   top: 10px;
@@ -17,9 +25,9 @@
 .mobileMenu:focus,
 .mobileBtnActive {
   outline: none;
-  background: white;
-  border-color: #0369a1;
-  color: #0369a1;
+  background: var(--white);
+  border-color: var(--blue);
+  color: var(--blue);
 }
 
 .mobileBtnActive::after {
@@ -31,11 +39,11 @@
 .mobileNav {
   display: block;
   position: absolute;
-  top: 70px;
+  top: 60px;
   height: 80vh;
   right: 0px;
   padding: 0 1rem;
-  background: white;
+  background: var(--white);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   border-radius: 0.2rem;
   transform: translateX(-10px);
@@ -49,7 +57,7 @@
   background: none;
   width: 100%;
   border: none;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid var(--gray);
   padding: 0.5rem 0;
   cursor: pointer;
   color: black;
@@ -57,7 +65,7 @@
 }
 .mobileNav a:hover {
   background: none;
-  color: #0369a1;
+  color: var(--blue);
 }
 .mobileNavActive {
   transition: 0.3s;
